--- a/style.css
+++ b/style.css
@@ -12,11 +12,15 @@ body {
 h1{
   font-size: 80px;
   color: blue;
-  text-shadow: 2px 2px 4px fuchsia;
+  text-shadow: 2px 2px 10px fuchsia;
 }
 
 h2 {
   font-size: 50px;
+}
+
+h2:hover {
+  color: blue;
 }
 
 p {
@@ -56,10 +60,11 @@ p {
 .grid-who, .grid-contact, .grid-image {
   border: 2px solid blue;
   border-radius: 30%;
-  box-shadow: 2px 2px 20px fuchsia;
+  box-shadow: 1px 1px 10px fuchsia;
 
   padding: 2em;
   display: grid;
+  text-align: center;
   
 }
 
